# rgrpc-go

./: BUILD.bazel  WORKSPACE
impl/: BUILD.bazel  impl.go
messages/: BUILD.bazel  messages.proto
services/: BUILD.bazel  services.proto
