load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["impl.go"],
    importpath = "github.com/bnczk/rgrpc-go/impl",
    visibility = ["//visibility:private"],
    deps = [
        "//messages:go_default_library",
        "//services:go_default_library",
    ],
)

go_binary(
    name = "impl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
