load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "services_proto",
    srcs = ["services.proto"],
    visibility = ["//visibility:public"],
    deps = ["//messages:messages_proto"],
)

go_proto_library(
    name = "services_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/bnczk/rgrpc-go/services",
    proto = ":services_proto",
    visibility = ["//visibility:public"],
    deps = ["//messages:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":services_go_proto"],
    importpath = "github.com/bnczk/rgrpc-go/services",
    visibility = ["//visibility:public"],
)
